# simple4x

./: Cargo.toml  start-dev.ps1
server/: package.json  tsconfig.json
server/src/: index.ts
server/src/adjudicator/: Adjudicator.ts
server/src/cards/: CardEngine.ts  cardHandlers.ts
server/src/game/: Game.ts
server/src/orders/: OrderCompiler.ts  OrderParser.ts  OrderValidator.ts
server/src/server/: api.ts  handlers.ts  ws.ts
shared/: types.ts
src/: lib.rs
ui/: package.json
ui/src/: App.css  App.tsx
ui/src/components/: CardOrderPanel.tsx  MapView.tsx  OrderOverlays.tsx  UnitMarkers.tsx
ui/src/game/: constants.js  tiles.ts  utils.ts
ui/src/hooks/: old_useMapInteraction.ts  useCardOrderState.ts  useMapInteraction.ts  useOrderState.js  useUnitState.ts
