[package]
name = "diplomacy_node_wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diplomacy = { git = "https://github.com/TedDriggs/diplomacy", branch = "retreat-civil-disorder" }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib"]

[features]
default = []